Fixed gallery sizes on small screens and changed window alert to toast

--- a/src/app/components/animated-gallery/animated-gallery.component.scss
+++ b/src/app/components/animated-gallery/animated-gallery.component.scss
@@ -5,10 +5,26 @@
     margin-left: auto;
     margin-right: auto;
     width: 65%;
+
+    @media (max-width: 1200px) {
+        height: 400px;
+    }
+
+    @media (max-width: 800px) {
+        height: 300px;
+    }
 }
 
 .carousel-item img {
     height: 600px;
+
+    @media (max-width: 1200px) {
+        height: 400px;
+    }
+
+    @media (max-width: 800px) {
+        height: 300px;
+    }
 }
 
 .gallery-title {
