--- a/src/app/components/see-more-shop/see-more-shop.component.scss
+++ b/src/app/components/see-more-shop/see-more-shop.component.scss
@@ -5,6 +5,14 @@
     margin-left: auto;
     margin-right: auto;
     width: 65%;
+    
+    @media (max-width: 1100px) {
+        height: 200px;
+    }
+
+    @media (max-width: 600px) {
+        height: 150px;
+    }
 }
 
 .game-title {
@@ -36,6 +44,14 @@
 .carousel-item img {
     width: 200px;
     height: 300px;
+
+    @media (max-width: 1100px) {
+        height: 200px;
+    }
+
+    @media (max-width: 600px) {
+        height: 150px;
+    }
 }
 
 .trophies {
